--- a/scvAndroid/app/build.gradle
+++ b/scvAndroid/app/build.gradle
@@ -23,6 +23,10 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
+    implementation 'com.android.support:design:26.1.0'
     compile 'com.koushikdutta.async:androidasync:1.2.6'
     compile 'com.android.volley:volley:1.0.0'
+    compile 'com.google.firebase:firebase-core:16.0.0'
+    compile 'com.google.firebase:firebase-database:15.0.1'
 }
+apply plugin: 'com.google.gms.google-services'
