--- a/scvAndroid/app/src/main/AndroidManifest.xml
+++ b/scvAndroid/app/src/main/AndroidManifest.xml
@@ -6,7 +6,6 @@
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.INTERNET" />
 
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -23,7 +22,15 @@
         </activity>
         <activity android:name=".RegisterActivity" />
         <activity android:name=".ListActivity" />
-        <activity android:name=".CastActivity" />
+        <activity
+            android:name=".CastActivity"
+            android:configChanges="orientation|screenSize">
+        </activity>
+        <activity
+            android:name=".teenList"
+            android:label="@string/title_activity_teen_list"
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
     </application>
 
 </manifest>
